<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="activity_settings">Settings</string>

    <string name="sort_item_1">Most Popular</string>
    <string name="sort_item_2">Highest-rated</string>
    <string name="sort_item_3">Favorites</string>
    <string name="sort_item1_value">popular</string>
    <string name="sort_item2_value">top_rated</string>
    <string name="sort_item3_value">favorites</string>

    <string name="display_preferences">Sort Order</string>
    <string name="preferences_sort_title">Sort By</string>
    <string name="preferences_sort_order_desc">Sort Movies by</string>
    <string name="preferences_sort_order_key">sortType</string>
    <string name="preferences_sort_default_value">popular</string>

    <string name="empty_view_title_text">Oh Snap! :( Go online for your cookie..</string>

    <string name="url_poster">http://image.tmdb.org/t/p/w185</string>
    <string name="url_backdrop">http://image.tmdb.org/t/p/w780</string>
    <string name="release_date_error">Unknown Release Date</string>

    <string name="ratings_header">TMDb Ratings: </string>
    <string name="movie_year">Year: </string>
    <string name="movie_synopsis_header">Synopsis: </string>
    <string name="movie_trailers">Trailers: </string>
    <string name="movie_reviews">Reviews: </string>
    <string name="share_trailer">Share trailer</string>

</resources>
